--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,9 @@ services:
     # ポートの指定（HOST:CONTAINER）
     ports:
       - 5432:5432
+    # databaseのデータをhostに保存
+    volumes:
+      -./db/data:/var/lib/postgresql/data
 
   # テスト環境用として postgres-test をサービスとして定義しました。
   postgres-test:
